--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "Oskar Korczak",
   "license": "ISC",
   "dependencies": {
-    "vscode-oniguruma": "^1.7.0",
-    "vscode-textmate": "^9.0.0"
+    "tree-sitter": "^0.20.5",
+    "tree-sitter-python": "^0.20.4"
   }
 }
