--- a/package.json
+++ b/package.json
@@ -4,13 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --mode development --open"
   },
   "keywords": [],
   "author": "Oskar Korczak",
   "license": "ISC",
   "dependencies": {
+    "path-browserify": "^1.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tree-sitter": "^0.20.5",
-    "tree-sitter-python": "^0.20.4"
+    "web-tree-sitter": "^0.20.8"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "babel-loader": "^9.1.3",
+    "html-webpack-plugin": "^5.5.3",
+    "tree-sitter-cli": "^0.20.8",
+    "tree-sitter-python": "^0.20.4",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
