--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open"
+    "start": "webpack-dev-server --mode development --open",
+    "validate": "tsc --noEmit"
   },
   "keywords": [],
   "author": "Oskar Korczak",
@@ -20,10 +21,15 @@
     "@babel/core": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.5.3",
     "tree-sitter-cli": "^0.20.8",
     "tree-sitter-python": "^0.20.4",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
