--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
+    "style-loader": "^3.3.3",
     "tree-sitter-cli": "^0.20.8",
     "tree-sitter-python": "^0.20.4",
     "ts-loader": "^9.4.4",
