--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
-    "validate": "tsc --noEmit"
+    "validate": "tsc --noEmit",
+    "test": "jest"
   },
   "keywords": [],
   "author": "Oskar Korczak",
@@ -22,14 +23,17 @@
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@types/jest": "^29.5.3",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.6.3",
     "style-loader": "^3.3.3",
     "tree-sitter-cli": "^0.20.8",
     "tree-sitter-python": "^0.20.4",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
